# YAPI

./: CMakeLists.txt  Readme.md
api/: CMakeLists.txt  CyclicPlugin.cpp  CyclicPlugin.h  InputPin.cpp  InputPin.h  OutputPin.cpp  OutputPin.h  PluginAPI.h  SampleEventHandler.h  Yapi.cpp  Yapi.h  YapiConfig.cpp  YapiConfig.h  YapiProperty.cpp  YapiProperty.h
cmakes/: CMakeLists.txt  YAPIConfig.cmake  YAPIConfigVersion.cmake
examples/: CMakeLists.txt
examples/main/: CMakeLists.txt  main.cpp
examples/plugins/: CMakeLists.txt  CyclicSenderPlugin.cpp  CyclicSenderPlugin.h  DataReceiverPlugin.h  DataSenderPlugin.h
lib/: CMakeLists.txt  CyclicSenderPlugin.cpp  CyclicSenderPlugin.h  DataReceiverPlugin.cpp  DataReceiverPlugin.h  DataSenderPlugin.cpp  DataSenderPlugin.h
main/: CMakeLists.txt  main.cpp
runtime/: CMakeLists.txt  Runtime.cpp  Runtime.h  YapiConfig.cpp  YapiConfig.h
